prover-ray/zkcdriver/testdata/synced/invalid/type_04.zkc
//error:2:12-16:unknown type alias
const TRUE:bool = 1